Progress toward sending employees back to presorted employee grid

--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -9,7 +9,7 @@
         <div class="board-column-content">
           
           <input class="read-short" type="text" placeholder="{{shift}}" readonly></input>
-          <div class="board-item">
+          <div class="board-item default-board-item">
             <div class="board-item-content" style='width:162px;max-height:35px;'>
               <span>{{scheduled.verbose_name}}</span>
             </div>
