--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -10,7 +10,7 @@
     <!--<div class='board-column-header'>Header!</div>-->
     <div class="employee-column-content">
       {% for employee in all_employees %}
-        <div class="board-item"><div class="board-item-content">{{employee.name|truncatechars:20}}</div></div>
+        <div class="board-item" id='{{forloop.counter}}'><div class="board-item-content">{{employee.name|truncatechars:20}}</div></div>
       {% endfor %}
     </div>
   </div>
