--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -1,21 +1,23 @@
 {% load staticfiles %}
 
-      <div class='board-column' style='width:20%;'>
+      <div class='board-column' style='width:18%;'>
         <div class='board-column-header'>
+          <div style='display:inline-block;'>
           <input type="checkbox" class="form-check-input" id="">
-          <span>{{location_verbose}}</span>
+          </div>
+          <div class='text-center' style='display:inline-block;padding-left:28px;'><div>{{location_verbose}}</div></div>
         </div>
         {% for shift, scheduled in position.items %}
         <div class="board-column-content">
           
           <input class="read-short" type="text" placeholder="{{shift}}" readonly></input>
           <div class="board-item default-board-item">
-            <div class="board-item-content" style='width:162px;max-height:35px;'>
-              <span>{{scheduled.verbose_name}}</span>
+            <div class="board-item-content" style='width:163px;max-height:35px;'>
+              <div>{{scheduled.verbose_name}}</div>
             </div>
           </div>
           
-          <input type="text" class="arrival-time" placeholder="Arrival" aria-label="Arrival" style='margin-left:180px;'></input>
+          <input type="text" class="arrival-time" placeholder="Arrival" aria-label="Arrival" style='margin-left:180px;'>
           
           
         </div>
