--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -1,2 +1,19 @@
 {% load staticfiles %}
-<p>Hello!</p>
+<div class='scroll-content-wrapper'>
+Make Scrollable
+<p>---Last Saved?</p>
+<p>---Arrage Panels:</p>
+<p>All</p>
+<p>By Section</p>
+<p>---Sort Panels</p>
+<p>Default (By Section)</p>
+<p>Alphabetical (Asc/Desc)</p>
+<p># of Positions</p>
+<p>---Highlight</p>
+<p>On/Off</p>
+<p>Unscheduled</p>
+<p>Scheduled</p>
+<p>Show/Hide Locations (By Section)</p>
+
+<p>Summarize Changes?</p>
+</div>
