--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -984,3 +984,10 @@ button:focus {
       margin: 0px;
     position: relative;
 }
+
+
+.scroll-content-wrapper {
+  position: relative;
+  max-height: 70vh;
+  overflow-y: auto;
+}
