--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -31,9 +31,13 @@
     {% endif %}
   </div>
       
-  <div class='' style='width: 100px;left: 80%;position: absolute;top: 250px;'>
+  <!--<div class='' style='height:100%; background:#EEE;width: 100%;left: 79%;position: absolute;top: 222px;'>-->
+  <!--  <div class='pl-4' style='width:17vw;padding-top:40px;'>-->
+  <div class='' style='height:100%; width: 19vw;left: 79vw;position: absolute;top: 40vh;'>
       {% include 'events/detail/panel.html' %}
   </div>
+  <!--  </div>-->
+  <!--</div>-->
       
       
       
