--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -1,19 +1,75 @@
 {% load staticfiles %}
-<div class='scroll-content-wrapper'>
-Make Scrollable
-<p>---Last Saved?</p>
-<p>---Arrage Panels:</p>
-<p>All</p>
-<p>By Section</p>
-<p>---Sort Panels</p>
-<p>Default (By Section)</p>
-<p>Alphabetical (Asc/Desc)</p>
-<p># of Positions</p>
-<p>---Highlight</p>
-<p>On/Off</p>
-<p>Unscheduled</p>
-<p>Scheduled</p>
-<p>Show/Hide Locations (By Section)</p>
+<ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
+  
+  <li class="list-group-item">
+    <div class='row'>
+      <div class='col-5'><span style='vertical-align:-webkit-baseline-middle;'>Sort Panels:</span></div>
+      <div class='col-7 pl-0'>
+        <select class="custom-select" style='text-transform:capitalize;'>
+          <option selected>Choose One...</option>
+          <option value="1">By Category (Default)</option>
+          <option value="2">Name (Asc)</option>
+          <option value="3">Name (Desc)</option>
+          <option value="4"># of Positions</option>
+        </select>
+      </div>
+    </div>
+  </li>
+  
+  <li class="list-group-item">
+    <div class='row'>
+      <div class='col-5'><span style='vertical-align:-webkit-baseline-middle;'>Show Panels:</span></div>
+      <div class='col-7 pl-0'>
+        <div class="btn-group btn-group-toggle" style='text-transform:capitalize; width:100%;' data-toggle="buttons">
+          <label class="btn btn-primary active" style='width:100%;'>
+            <input type="radio" name="options" id="option1" autocomplete="off" checked> All
+          </label>
+          <label class="btn btn-primary">
+            <input type="radio" name="options" id="option3" autocomplete="off"> By Section
+          </label>
+        </div>
+      </div>
+    </div>    
+  </li>
+  
+  <li class="list-group-item">
+    <div class='row'>
+      <div class='col-5'><span style='vertical-align:-webkit-baseline-middle;'>Highlight:</span></div>
+      <div class='col-7'>
+        <div class='row'>  
+          <div class="form-check" style='text-transform:capitalize;'>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Scheduled
+            </label>
+          </div>
+          <div class="form-check" style='text-transform:capitalize;'>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Unscheduled
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </li>
+</ul>
 
-<p>Summarize Changes?</p>
-</div>
+<!--<div class='scroll-content-wrapper' style='width:100%;text-transform:uppercase;letter-spacing:1px;'>-->
+  
+
+
+<ul class="list-group pt-3" style='text-transform:uppercase;letter-spacing:1px;'>
+  
+  <li class="list-group-item">Locations:</li>
+  {% for category in categories %}
+    <li class="list-group-item d-flex justify-content-between align-items-center">{{category.0}}<span class="badge badge-primary badge-pill">14</span></li>
+  {% endfor %}
+</ul>
+
+    
+<!--    <p>Show/Hide Locations (By Section)</p>-->
+    
+<!--    <p>Summarize Changes?</p>-->
+<!--  </div>-->
+<!--</div>-->
