--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -4,10 +4,12 @@
   
   <li class="list-group-item">
     <div class='row'>
-      <div class='col-5'><span style='vertical-align:-webkit-baseline-middle;'>Show Panels:</span></div>
-      <div class='col-7 pl-0'>
+      <div class='col-4'>
+        <span style='vertical-align:-webkit-baseline-middle;'>Display:</span>
+      </div>
+      <div class='col'>
         <div class="btn-group btn-group-toggle" style='text-transform:capitalize; width:100%;' data-toggle="buttons">
-          <label class="btn btn-primary active" style='width:100%;'>
+          <label class="btn btn-primary active">
             <input type="radio" name="options" id="option1" autocomplete="off" checked> All
           </label>
           <label class="btn btn-primary">
@@ -20,13 +22,12 @@
   
   <li class="list-group-item">
     <div class='row'>
-      <div class='col-5'><span style='vertical-align:-webkit-baseline-middle;'>Sort Panels:</span></div>
-      <div class='col-7 pl-0'>
+      <div class='col-12'>
         <select class="custom-select" style='text-transform:capitalize;'>
-          <option selected>Choose One...</option>
-          <option value="1">By Category (Default)</option>
-          <option value="2">Name (Asc)</option>
-          <option value="3">Name (Desc)</option>
+          <option selected>Sort By...</option>
+          <option value="1">Category (Default)</option>
+          <option value="2">Location Name (Asc)</option>
+          <option value="3">Location Name (Desc)</option>
           <option value="4"># of Positions</option>
         </select>
       </div>
@@ -37,7 +38,7 @@
   
   <li class="list-group-item">
     <div class='row'>
-      <div class='col-5'><span style='vertical-align:-webkit-baseline-middle;'>Highlights:</span></div>
+      <div class='col-5'><span>Highlight:</span></div>
       <div class='col-7'>
         <div class='row'>  
           <div class="form-check" style='text-transform:capitalize;'>
@@ -58,37 +59,93 @@
   </li>
 </ul>
 
-<ul class="list-group pt-3" style='text-transform:uppercase;letter-spacing:1px;'>
+<ul class='list-group list-group-flush mt-3' style='border: 1px solid rgba(0,0,0,.125);border-radius:4px;'>
   
-  <li class="list-group-item">Active Locations:</li>
-  {% for category, location in locations.items %}
-    <li class="list-group-item d-flex justify-content-between align-items-center location-category" style='text-transform:capitalize;' data-toggle="collapse" href="#{{category|slugify}}">
-      {{category}}
-      <span class="badge badge-primary badge-pill">
-        <span class='active-count'>0</span>
-        <span>/</span>
-        <span class='category-count'>{{location.count}}</span>
+  <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;' data-toggle="collapse" href="#display-options">
+    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
+          
+      <li class="list-group-item" style='border-top:none;'>Display</li>
+      <span class='collapse' id='display-options'>
+        <li class='list-group-item'>Option 1</li>
+        <li class='list-group-item'>Option 1</li>
       </span>
-    </li>
-    <div id="{{category|slugify}}" class="panel-collapse collapse" style='border-left: 1px solid rgba(0,0,0,.125);border-right: 1px solid rgba(0,0,0,.125);'>
-        <div class="form-check" style='text-transform:capitalize;'>
-          <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" checked>
-          <label class="form-check-label" for="defaultCheck1">
-            <strong>All</strong>
-          </label>
-        </div>
-        
-        {% for l in location %}
-        <div class="form-check" style='text-transform:capitalize;'>
-          <input class="form-check-input location-checkbox" type="checkbox" value="" id="defaultCheck1" checked>
-          <label class="form-check-label" for="defaultCheck1">
-            {{l}}
-          </label>
+    </ul>
+  </li>
+  
+  
+  <li class="list-group-item" style='border-bottom:none;border-top:none;padding:0px;' data-toggle="collapse" href="#location-categories">
+    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
+  
+      <li class="list-group-item" style='border-top:none;'>Active Locations</li>
+      
+      <span class='collapse' id='location-categories'>
+        {% for category, location in locations.items %}
+        <li class="list-group-item d-flex justify-content-between align-items-center location-category" style='text-transform:capitalize;' data-toggle="collapse" href="#{{category|slugify}}">
+          + {{category}}
+          <span class="badge badge-primary badge-pill">
+            <span class='active-count'>0</span>
+            <span>/</span>
+            <span class='category-count'>{{location.count}}</span>
+          </span>
+        </li>
+        <div id="{{category|slugify}}" class="panel-collapse collapse py-3" style='border-left: 1px solid rgba(0,0,0,.125);border-right: 1px solid rgba(0,0,0,.125);'>
+          <div class="form-check" style='text-transform:capitalize;'>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1" checked>
+            <label class="form-check-label" for="defaultCheck1">
+              <strong>All</strong>
+            </label>
+          </div>
+              
+          {% for l in location %}
+          <div class="form-check" style='text-transform:capitalize;'>
+            <input class="form-check-input location-checkbox" type="checkbox" value="" id="defaultCheck1" checked>
+            <label class="form-check-label" for="defaultCheck1">
+              {{l}}
+            </label>
+          </div>
+          {% endfor %}
         </div>
         {% endfor %}
-      </div>
-  {% endfor %}
+        
+      </span>
+    </ul>
+  </li>
+  
+  
+  
+  
+  <li class="list-group-item" style='border-top:none;padding:0px;' data-toggle="collapse" href="#arrival-times">
+    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
+  
+      <li class="list-group-item">Arrival Times</li>
+      <span class='collapse' id='arrival-times'>
+        
+        
+        <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;' data-toggle="collapse" href="#{{category|slugify}}">
+          {% for role in roles %}
+            <div class="input-group mb-2 col-12 px-0">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">{{role.verbose_name}}</span>
+              </div>
+              <input type="text" class="form-control" aria-label="Default" placeholder='Arrival Time' aria-describedby="inputGroup-sizing-default">
+            </div>
+          {% endfor %}
+          
+        </li>
+        
+      </span>
+    </ul>
+  </li>
+  
+  
 </ul>
+
+
+
+
+
+
+
 
     
 <!--    <p>Show/Hide Locations (By Section)</p>-->
