Update control panel JS for selecting all locations. Prevent inner nested lists from collapsing.

--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -33,7 +33,7 @@
       
   <!--<div class='' style='height:100%; background:#EEE;width: 100%;left: 79%;position: absolute;top: 222px;'>-->
   <!--  <div class='pl-4' style='width:17vw;padding-top:40px;'>-->
-  <div class='' style='height:100%; width: 15vw;left: 79vw;position: absolute;top: 260px;'>
+  <div class='' style='height:100%; width: 15vw;right: 39px;position: absolute;top: 260px;'>
       {% include 'events/detail/panel.html' %}
   </div>
   <!--  </div>-->
