--- a/company_profile/templates/company_profile/company_profile.html
+++ b/company_profile/templates/company_profile/company_profile.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block content %}  
 
-<div class="container background-container">  
+<div class="container-fluid background-container">  
   <div class='card shadow-custom'>
     <div class='card-body mx-4 align-center'>
       <div class='row'>
