--- a/events/templates/events/detail/event_detail.html
+++ b/events/templates/events/detail/event_detail.html
@@ -19,7 +19,7 @@
 
   <div style='height:100%; width:1500px;'>
     {% if not first_save %}
-    <div class='board' style='margin-left:212px;margin-bottom:100px;'>
+    <div class='board location-board' style='margin-left:212px;margin-bottom:100px;'>
       {% for location, attributes in roster.locations.items %}
         {% if attributes.active %}
           {% with position=attributes.positions bar=attributes.bar active=attributes.active location_verbose=attributes.location location_id=location %}
