--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -1,9 +1,9 @@
 {% load staticfiles %}
 
       <div class='board-column'>
-        <div class='board-column-header'>
+        <div class='board-column-header hList hList_breadcrumb hList_5up' style='height:34px;'>
           <input type="checkbox" class="form-check-input" id="">
-          <div class='text-center' style='display:inline-block;padding-left:28px;'><div>{{location_verbose}}</div></div>
+          <div class='text-center location-title' style='display:inline-block;padding-left:28px;text-transform:capitalize;letter-spacing:.5px; font-size:1.1em;'><div>{{location_verbose}}</div></div>
         </div>
         {% for shift, scheduled in position.items %}
         <div class="board-column-content">
