--- a/events/templates/events/detail/panel.html
+++ b/events/templates/events/detail/panel.html
@@ -5,14 +5,15 @@
   <!--<li class="list-group-item text-center" style='border-top:none;padding:0px;text-transform:uppercase;letter-spacing:1px;'>Control Panel</li>-->
   
   <li class="list-group-item" style='padding:0px;'>
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
-      <li class="list-group-item" style='border-top:none;' data-toggle="collapse" href="#display-options">
-        <img src='{% static "img/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:-5px;' alt="Menu Icon"/>
+    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#40c8c2;'>
+      <li class="list-group-item ml-2" style='border-top:none;' data-toggle="collapse" href="#display-options">
+        
         
         Display
+        <img src='{% static "img/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
       </li>
-      <ul class="list-group collapse" id='display-options' style='border-top:1px solid rgba(0,0,0,.125);background: #007bff;'>
-          <li class="list-group-item" style='background:#FAFAFA;margin-left:12px;'>
+      <ul class="list-group collapse" id='display-options' style='border-top:1px solid rgba(0,0,0,.125);'>
+          <li class="list-group-item" style='background:#FAFAFA;'>
             <div class='row'>
               <div class='col'>
                 <div class="btn-group btn-group-toggle" style='text-transform:capitalize; width:100%;' data-toggle="buttons">
@@ -26,7 +27,7 @@
               </div>
             </div>    
           </li>
-          <li class="list-group-item" style='background:#FAFAFA;margin-left:12px;'>
+          <li class="list-group-item" style='background:#FAFAFA;'>
             <div class='row'>
               <div class='col-12'>
                 <select class="custom-select" style='text-transform:capitalize;'>
@@ -39,7 +40,7 @@
               </div>
             </div>
           </li>
-          <li class="list-group-item" style='background:#FAFAFA;margin-left:12px;'>
+          <li class="list-group-item" style='background:#FAFAFA;'>
             <div class='row'>
               <div class='col-5'><span>Highlight:</span></div>
               <div class='col-7'>
@@ -66,15 +67,15 @@
   
   <li class="list-group-item" style='border-bottom:none;padding:0px;'>
     
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
-      <li class="list-group-item" data-toggle="collapse" href="#location-categories">
-        <img src='{% static "img/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:-5px;' alt="Menu Icon"/>
+    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#4c98cf;'>
+      <li class="list-group-item ml-2" data-toggle="collapse" href="#location-categories">
         Active Locations
+        <img src='{% static "img/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
       </li>
       <!--<span class='collapse' id='location-categories'>-->
-      <ul class="list-group collapse" id='location-categories' style='border-top:1px solid rgba(0,0,0,.125);background: #007bff;'>
+      <ul class="list-group collapse" id='location-categories' style='border-top:1px solid rgba(0,0,0,.125);'>
         {% for category, location in locations.items %}
-        <li class="list-group-item d-flex justify-content-between align-items-center location-category" style='text-transform:capitalize;background:#FAFAFA;margin-left:12px;' data-toggle="collapse" href="#{{category|slugify}}">
+        <li class="list-group-item d-flex justify-content-between align-items-center location-category" style='text-transform:capitalize;background:#FAFAFA;' data-toggle="collapse" href="#{{category|slugify}}">
           + {{category}}
           <span class="badge badge-primary badge-pill">
             <span class='active-count'>0</span>
@@ -106,14 +107,15 @@
   </li>
   
   <li class="list-group-item" style='padding:0px;'>
-    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;'>
-      <li class="list-group-item" data-toggle="collapse" href="#arrival-times">
-        <img src='{% static "img/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:-5px;' alt="Menu Icon"/>
+    <ul class="list-group" style='text-transform:uppercase;letter-spacing:1px;background:#4874a8;'>
+      <li class="list-group-item ml-2" data-toggle="collapse" href="#arrival-times">
+        
         Arrival Times
+        <img src='{% static "img/menu.png" %}' style='width:18px;height:18px;margin-right:7px;margin-top:4px;float:right;' alt="Menu Icon"/>
       </li>
-      <ul class="list-group collapse" id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);background: #007bff;'>
+      <ul class="list-group collapse" id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>
       <!--<span class='collapse' id='arrival-times' style='border-top:1px solid rgba(0,0,0,.125);'>-->
-        <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;background:#FAFAFA;margin-left:12px;data-toggle="collapse" href="#{{category|slugify}}"'>
+        <li class="list-group-item justify-content-between align-items-center location-category" style='text-transform:capitalize;background:#FAFAFA;data-toggle="collapse" href="#{{category|slugify}}"'>
           {% for role in roles %}
             <div class="input-group mb-2 px-0">
               <div class="input-group-prepend col px-0">
