--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -74,12 +74,12 @@ td > a {font-weight:600;}
 
 .navbar {background-color: rgba(0,0,0,.7);}
 
-.location-title {
-    font-size: 1.1em;
-    margin-bottom: 0px;
-    font-family: "Source Sans Pro";
-}
-.location-body {background-color: #e8ebf1;border-bottom-left-radius:.25rem; border-bottom-right-radius:.25rem}
+/*.location-title {*/
+/*    font-size: 1.1em;*/
+/*    margin-bottom: 0px;*/
+/*    font-family: "Source Sans Pro";*/
+/*}*/
+/*.location-body {background-color: #e8ebf1;border-bottom-left-radius:.25rem; border-bottom-right-radius:.25rem}*/
 .card-header.location-header {
     line-height: 12px;
     background:#99a0ab;
@@ -994,4 +994,45 @@ button:focus {
 
 .list-group-item {
   background:#F5F5F5;
+}
+
+
+
+
+
+
+
+
+
+/*.board-column:nth-child(1) .board-column-header {*/
+/*  background: #40c8c2;*/
+/*}*/
+
+/*.board-column:nth-child(2) .board-column-header {*/
+/*  background: red;*/
+/*}*/
+
+/*.board-column:nth-child(3) .board-column-header {*/
+/*  background: blue;*/
+/*}*/
+
+/*.board-column-header {*/
+/*  background-image: linear-gradient(#40c8c2,#4c98cf,#4873a6,#595386,#554269);*/
+/*  background-size: cover;*/
+/*  background-position: center;*/
+/*  background-attachment: fixed;  /* <- here it is 
+
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*}*/
+
+@mixin colors($max-count, $color-frequency){
+  $color: 360/$max-count;
+  
+  @for $i from 1 through $max-count {
+    &:nth-child(#{$max-count}n + #{$i}) {
+      // Modify 's' and 'l' percentages to match color scheme you want
+      background: hsl(($i - 1)*($color / $color-frequency), 80%, 60%);
+    }
+  }
 }
