--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -37,9 +37,9 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
       <script src="https://unpkg.com/muuri@0.6.3/dist/muuri.min.js"></script>
       <script type="text/javascript" src="{% static 'js/dragDrop.js' %}"></script>
-      
+      <!--<script src="{% static 'js/multiple.js' %}"></script>-->
       <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
-      <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+      <!--<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>-->
       
 
     </body>
