--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 
       <div class='board-column'>
-        <div class='board-column-header hList hList_breadcrumb hList_5up' style='height:34px;'>
+        <div class='board-column-header hList hList_5up' style='height:34px;'>
           <input type="checkbox" class="form-check-input" id="">
           <div class='text-center location-title' style='display:inline-block;padding-left:28px;text-transform:capitalize;letter-spacing:.5px; font-size:1.1em;'><div>{{location_verbose}}</div></div>
         </div>
