Update location card styles

--- a/events/templates/events/detail/new_location_card.html
+++ b/events/templates/events/detail/new_location_card.html
@@ -1,9 +1,11 @@
 {% load staticfiles %}
 
-      <div class='board-column'>
-        <div class='board-column-header hList hList_5up' style='height:34px;'>
-          <input type="checkbox" class="form-check-input" id="">
-          <div class='text-center location-title' style='display:inline-block;padding-left:28px;text-transform:capitalize;letter-spacing:.5px; font-size:1.1em;'><div>{{location_verbose}}</div></div>
+      <div class='board-column' style='box-shadow: #cacaca 0px 0px 12px;border-radius:0px'>
+        <div class='board-column-header hList hList_5up' style='height:38px;background:#336f99'>
+          <!--<input type="checkbox" class="form-check-input" id="" style='vertical-align: middle;margin-top: 3px;'>-->
+          <div class='text-center location-title' style='line-height:2em;text-transform:capitalize;letter-spacing:.5px; font-size:1.1em;font-weight:600;vertical-align: middle; margin-top: 2px;'>
+            <span>{{location_verbose}}</span>
+          </div>
         </div>
         {% for shift, scheduled in position.items %}
         <div class="board-column-content">
@@ -16,7 +18,7 @@
             </div>
             
           </div>
-          <input type="text" class="arrival-time" placeholder="Arrival" aria-label="Arrival">
+          <input type="text" class="arrival-time" placeholder="Time" aria-label="Arrival">
           
           
           
